# feedback-report-generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assignment/: models.py  serializers.py  tasks.py  urls.py  views.py
assignment/management/commands/: load_student_events.py
assignment/migrations/: 0001_initial.py  0002_alter_htmlreport_task_id.py  0003_alter_pdfreport_task_id.py
assignment/utils/: html_generator.py  pdf_generator.py
feedback_report/: celery.py  settings.py  urls.py
templates/: index.html
